--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,182 @@
 */
 
 .page {
+  color: var(--text-color);
+  font-family: var(--main-font);
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 696px;
+  margin: 102px auto 107px;
+  border: 2px solid var(--accent-color);
+  padding-block-start: 136px;
+  padding-block-end: 25px;
+  background-color: var(--bg-color);
+}
+
+.logo {
+  padding-block-end: 20px;
+  font-family: var(--accent-font, sans-serif);
+  font-size: clamp(3.063rem, 2.71rem + 1.502vw, 4.063rem);
+  text-transform: uppercase;
+}
+
+.header__title {
+  padding-block-end: 25px;
+  font-family: var(--accent-font, sans-serif);
+  font-size: clamp(0.875rem, 0.677rem + 0.845vw, 1.438rem);
+  text-transform: uppercase;
+}
+
+.theme-menu__item:not(:last-child) {
+  margin-block-end: 14px;
+}
+
+.theme-menu__button {
+  position: relative;
+  border: none;
+  font-family: var(--accent-font, sans-serif);
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled::before {
+  content: "►";
+  position: absolute;
+  bottom: 1px;
+  left: -16px;
+}
+
+.theme-menu__button:disabled {
+  position: relative;
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+}
+.main {
+  max-width: 696px;
+  margin: 0 auto;
+}
+
+.card__list-item {
+  border: 2px solid var(--accent-color);
+}
+
+.card__list-item:not(:last-child) {
+  margin-block-end: 54px;
+}
+
+.card__title {
+  border-block-end: 2px solid var(--accent-color);
+  padding: 8px 10px;
+  font-family: var(--main-font);
+  font-size: var(--font-size, 18px);
+  background-color: var(--bg-color);
+}
+
+.image {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card__label {
+  position: absolute;
+  opacity: 0.5;
+  color: var(--accent-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  text-transform: uppercase;
+  mix-blend-mode: hard-light;
+}
+
+.card__text {
+  border-block-start: 2px solid var(--accent-color);
+  padding: 0 25px;
+  font-size: var(--font-size, 18px);
+  background-color: var(--bg-color);
+}
+
+.text {
+  padding-block-start: 27px;
+  line-height: 21px;
+}
+
+.card__button {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 25px;
+  background-color: var(--bg-color);
+}
+
+.card__icon-button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__like-button {
+  min-width: 130px;
+  min-height: 38px;
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+}
+
+.button__text {
+  color: var(--text-color);
+  font-family: var(--accent-font);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 90%;
+  text-align: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__button {
+  width: 335px;
+  height: 51px;
+  margin-block-start: 54px;
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+}
+
+@media (width <= 375) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
 }
