--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,52 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+
+:root.theme-light {
+    --text-color: #000;
+    --accent-color:#000;
+    --decor-color: #ff0000;
+    --bg-color: #fff;
+    --bg-image:
+    repeating-linear-gradient(transparent 0, transparent 2px, #d3d3d3 2px, #d3d3d3 4px),
+    repeating-linear-gradient(to left, transparent 0, transparent 2px, #d3d3d3 2px, #d3d3d3 4px),
+    repeating-linear-gradient(to bottom, #E7E7E7 0%, #1A1A1A 100%);
+}
+
+:root.theme-dark {
+    --text-color:#00CC14;
+    --accent-color:#00CC14;
+    --decor-color: #ff0000;
+    --bg-color: #000;
+    --bg-image: 
+    repeating-linear-gradient(transparent 0, transparent 2px, #000 2px, #000 4px),
+    repeating-linear-gradient(to left, transparent 0, transparent 2px, #000 2px, #000 4px),
+    repeating-linear-gradient(to bottom, #007F0C 0%, #004306 100%);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-color:#00CC14;
+    --accent-color:#00CC14;
+    --decor-color: #ff0000;
+    --bg-color: #000;
+    --bg-image: 
+    repeating-linear-gradient(transparent 0, transparent 2px, #000 2px, #000 4px),
+    repeating-linear-gradient(to left, transparent 0, transparent 2px, #000 2px, #000 4px),
+    repeating-linear-gradient(to bottom, #007F0C 0%, #004306 100%);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+:root {
+  --text-color: #000;
+  --accent-color:#000;
+  --decor-color: #ff0000;
+  --bg-color: #fff;
+  --bg-image:
+  repeating-linear-gradient(transparent 0, transparent 2px, #d3d3d3 2px, #d3d3d3 4px),
+  repeating-linear-gradient(to left, transparent 0, transparent 2px, #d3d3d3 2px, #d3d3d3 4px),
+  repeating-linear-gradient(to bottom, #E7E7E7 0%, #1A1A1A 100%);
+}
+}
