--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,9 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --main-font: "Inter-Variable";
+  --accent-font:"PressStart2P-Regular";
+  --font-size: 18px;
+  --font-weight: 400;
+  --line-hight: 21px;
+}
